# hmm-market-regime-detection

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: example_daily_spy.yaml
notebooks/: 01_openbb_hmm_pipeline_walkthrough.ipynb  02_walk_forward_drift_diagnostics.ipynb  README.md
scripts/: run_pipeline.py
src/hmm_regime/: __init__.py  cli.py  data.py  features.py  labeling.py  metrics.py  model.py  pipeline.py  plotting.py  walk_forward.py
tests/: test_features.py  test_metrics.py  test_pipeline.py  test_walk_forward.py
