[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-market-regime-detection"
version = "0.1.0"
description = "Hidden Markov Model toolkit for market regime detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mengren Man" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "hmmlearn>=0.3.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
openbb = [
  "openbb>=4",
]

[project.scripts]
hmm-regime = "hmm_regime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hmm_regime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
